# Explainable-AI---SHAP-and-LIME

./: main.py  pyproject.toml
Shap/ANN_Shap/: ann_shap_intro.ipynb
Shap/CNN/: cnn_case_study.ipynb
Shap/Classficationand Regression/: classification.ipynb  regression_shap.ipynb
Shap/Shap_Intro/: shap_background.ipynb  shap_intro_demo.ipynb
